# Agents

./: Agent.ipynb  Agents_ollama.ipynb  dummy_agent.ipynb  pyproject.toml
Examples/: code_agent.ipynb
Smolagents/: Intro.ipynb
